--- a/src/mainNavigation/navItems.css
+++ b/src/mainNavigation/navItems.css
@@ -23,3 +23,35 @@
 .nav-items a.active {
     color: #ff905b;
 }
+@media (max-width:480px) {
+    
+    .nav-items ul {
+        list-style: none;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+        height: calc(100vh - 5rem);
+        padding-inline-start: 0;
+    }
+
+    .nav-items li {
+        margin-right: 2rem;
+
+    }
+
+    .nav-items a {
+        text-decoration: none;
+        text-transform: lowercase;
+        font-size: 1.5rem;
+        font-weight: 400;
+        color: #75cff8;
+        
+    }
+
+    .nav-items a:hover,
+    .nav-items a:active,
+    .nav-items a.active {
+        color: #ff905b;
+    }
+}
